# hal

./: .gitignore  CMakeLists._txt  CMakeLists.txt  CMakePresets.json  CPacking.cmake  Makefile  README.md  gen_distrib.bat  hal_new_example.cpp  hal_new_interface.h  make_mc12101_virtual.bat  mb7707.cmake  mc12101.cmake  mc5103.cmake  mc7601.cmake  nmc-gcc-compile.cmake  version.txt  virtual.cmake
cmake/: CPacking.cmake  hal-config.cmake.in  hal_mb7707-config.cmake.in  hal_mc12101-config.cmake.in  hal_mc12101_host-config.cmake.in  hal_mc5103-config.cmake.in  hal_mc7601-config.cmake.in  hal_target-config.cmake.in  increment_build.cmake  mb7707-sources.cmake  mc12101-sources.cmake  mc5103-sources.cmake  mc7601-sources.cmake  nmc-gcc-compile.cmake  utils.cmake  x86-sources.cmake
examples/: CMakeLists.txt
examples/link1board/: CMakeLists.txt
examples/link1board/src_target0/: nm_main0.cpp
examples/old-examples/led/src_nm0/: nm_main.cpp
examples/old-examples/link1board/: CMakeLists.txt
examples/old-examples/link1board/src_target1/: nm_main1.cpp
examples/old-examples/printf-standalone_gcc/: main.cpp
examples/old-examples/profiler-standalone/profile-tbl-out/: nm-main.cpp
examples/simple/: CMakeLists.txt  Makefile  cleanup.bat  host.cpp  make.bat  mb7707brd.cfg  mc12101brd.lds  run.bat  simple.cpp
examples/sync-host-1nmc/: CMakeLists.txt  Makefile  mc12101brd.lds  nm-main.cpp  pc-main.cpp
examples/sync-host-1nmc/host/: CMakeLists.txt
hal-run/: CMakeLists.txt
hal-run/include/: nmrun.h
hal-run/libelf/: CMakeLists.txt
hal-run/libelf/include/: elf_set.h  libelf.h  libint.h
hal-run/libelf/src/: libelf.cpp  liblib.cpp
hal-run/src/: command_line.cpp  dump.cpp  elf_analysis.cpp  main.cpp
host/: CMakeLists.txt
host/cmake/: hal_host-config.cmake.in
host/mb7707/: CMakeLists.txt
host/mc12101/: CMakeLists.txt
host/mc5103/: CMakeLists.txt
host/mc7601/: CMakeLists.txt
host/src/: hal-core.h  hal.cpp  library.h
host/src/host_io/: nm_io_host.h
host/src/mc12101/: hal-mc12101host.cpp
host/src/mc7601/: hal-mc7601host.cpp
host/test/: CMakeLists.txt
host/test/open_close/: main.cpp
host/virtual/: CMakeLists.txt
include/: hal.h  hal_host.h  hal_target.h  heap.h  nmlink.h  nmprofiler.h  printx.h  ringbuffert.h
include/hal/: hal-host.h  hal-options.h  hal.h  halcp.h  hassert.h  hassert.hs  ringbuffer.h  ringbuffer_host.h  ringbuffert.h  utils.h
make/mb7707/: CMakeLists.txt  Makefile
make/mc12101/: CMakeLists.txt  Makefile  legacy.mk
make/mc5103/: CMakeLists.txt  nmc4vars_win.mk
make/mc7601/: CMakeLists.txt  premake5.lua
make/virtual/: premake5.lua
make_mc12101/: CMakeLists.txt  Makefile
script/: hal_utilities.py  profiler.py
src/: hal-core.h  hal.cpp  io_service.cpp  library.h  logger.cpp  logger.h  mc12101_bsp.h  options-core.h  options.cpp
src/1879hb1ya/: board_handler.cpp
src/1879vm5ya/: cache.asm
src/1879vm6ya/: Peterson_algorithm.c  board_handler.cpp  hal-core.cpp  halCheckParamDMA.c  halInitDoubleDma.c  halInitPacketDma.c  halSyncFuncs.cpp  halcp.cpp
src/1879vya1ya/: 1879ВЯ1Я(ARM+nm6406x2).txt  board_handler.cpp
src/host/mb7707/: hal-mb7707host.cpp
src/host/mc12101/: hal-mc12101host.cpp
src/host/mc5103/: hal-mc5103host.cpp
src/host/mc7601/: hal-mc7601host.cpp
src/io/host_io/: nm_io_host.h
src/nmc_all/: ledSOS.c  malloc.cpp  profiler-print.cpp
src/printf_nmcpp/: printf.c
src/printf_nmgcc/: printf.cpp
src/ringbuffer/: printMatrix_16s.cpp  printMatrix_16x.cpp
src/virtual/: hal-defs.h  hal-x86host.cpp  hal-x86target.cpp  led.cpp
src/x86/: board_handle.cpp  bsp_stub.cpp  hal-core.h  hal.cpp  halGet.c  halPut.c  halringbuffer.cpp  io_service.cpp  library.h  library_win.cpp  mb5103bsp.cpp  mb7707bsp.cpp  mb7707bsp.h  mc12101_bsp.cpp  mc12101bsp.cpp  mc12101bsp.h  mc12705bsp.cpp  mc12705bsp.h  mc5103bsp.cpp  mc5103bsp.h  relay.cpp  sleep.cpp  test_dummy_bsp.cpp  test_dummy_bsp.h
src_host_io/: services.cpp
src_printf_nmgcc/: puts.cpp
test/: CMakeLists.txt  mb7707.c  mc12101.c
test/1879vm6ya/: CMakeLists.txt  halcp.c  run_parallel.py  target.c
test/1879vm6ya/data/: nmc0.ld  nmc1.ld  shared_mem.ld
test/cmake/: test-service.cmake
test/data/mc12101/: dummy.abs  factorial.abs
test/host-target/: CMakeLists.txt
test/x86/: CMakeLists.txt  mb7707.c  mc12101.c  mc12101_remote.c  mc12705.c
test/x86/data/mb7707/: factorial.abs
test/x86/data/mc12705/: factorial.abs
tools/: push_to_master.sh
trash/host/src/: board_handle.cpp  library_win.cpp
trash/host/src/host_io/: services.cpp
trash/make/mc5103/: CMakeLists.txt  Makefile
trash/make/mc7601/: CMakeLists.txt  Makefile
trash/virtual/: CMakeLists.txt
trash/virtual/src/: hal-x86target.cpp
virtual/: CMakeLists.txt
virtual/src/: cache.c  hal-defs.h  hal-x86target.cpp
